# speq-tools

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  enthropic.enth  package-lock.json  package.json  speq.speq
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  lint.yml  release.yml  scorecard.yml  security-scan.yml  slsa.yml
enthropic/: parser.py
src/: build_cmd.rs  build_cmd.ts  check.ts  context.ts  global_config.ts  guide.ts  index.ts  init_cmd.ts  lint.ts  mcp.ts  new_wizard.ts  parser.ts  setup.rs  setup.ts  state.ts  tui.rs  tui.ts  utils.ts  validator.ts  vault.ts
tests/: parser.test.ts  validator.test.ts
